--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios": "./node_modules/.bin/react-native run-ios --simulator=\"iPhone 8\"",
+    "android": "./node_modules/.bin/react-native run-android",
     "test": "jest"
   },
   "dependencies": {
