--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,5 +29,12 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+
+
+        // Refer: https://github.com/ivpusic/react-native-image-crop-picker#android-1
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
+        // ADD THIS
+        maven { url "https://jitpack.io" }
     }
 }
