--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-crop-picker": "^0.23.1",
     "react-native-image-picker": "^0.28.1",
     "react-navigation": "^3.8.1"
   },
