--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'ReactNativeSandbox' do
   #  # Pods for testing
   #end
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'ReactNativeSandboxTests' do
     inherit! :search_paths
     # Pods for testing
