--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'ReactNativeSandbox' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
+
   target 'ReactNativeSandboxTests' do
     inherit! :search_paths
     # Pods for testing
