--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-crop-picker": "^0.23.1",
     "react-native-image-picker": "^0.28.1",
+    "react-native-sentry": "^0.42.0",
     "react-navigation": "^3.8.1"
   },
   "devDependencies": {
