--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-config')
     implementation project(':react-native-sentry')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-image-crop-picker')
