--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'ReactNativeSandbox' do
 
   pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
 
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
   target 'ReactNativeSandboxTests' do
     inherit! :search_paths
     # Pods for testing
